--- a/data/popup/index.html
+++ b/data/popup/index.html
@@ -7,24 +7,20 @@
   </head>
   <body vbox data-settings=false data-youtube=false>
     <div hbox flex=1>
-      <div flex=1 vbox align="center" data-cmd="open-youtube">
-        <img src="download.svg" flex="1">
+      <div flex=1 vbox align="center" pack="end" data-cmd="open-youtube">
         <span youtube="true" data-i18n="pp_1"></span>
         <span youtube="false" data-i18n="pp_2"></span>
         <img youtube="true" id="more" src="more.svg" width="16" height="16" data-cmd="more">
       </div>
-      <div flex=1 vbox align="center" data-cmd="display-panel">
-        <img src="list.svg" flex="1">
+      <div flex=1 vbox align="center" pack="end" data-cmd="display-panel">
         <span data-i18n="pp_3"></span>
       </div>
     </div>
     <div hbox flex=1>
-      <div flex=1 vbox align="center" data-cmd="open-converter">
-        <img src="convert.svg" flex="1">
+      <div flex=1 vbox align="center" pack="end" data-cmd="open-converter">
         <span data-i18n="pp_4"></span>
       </div>
-      <div flex=1 vbox align="center" data-cmd="open-options">
-        <img src="settings.svg" flex="1">
+      <div flex=1 vbox align="center" pack="end" data-cmd="open-options">
         <span data-i18n="pp_5"></span>
       </div>
     </div>
@@ -39,14 +35,14 @@
         </ul>
       </div>
       <div flex=1 hbox align="center" pack="center">
-        <span data-i18n="pp_2"></span>
+        <span data-i18n="pp_8"></span>
         <ul>
-          <li><input type="radio" name="quality" id="highest"> <label for="highest" data-i18n="pp_21"></label></li>
-          <li><input type="radio" name="quality" id="1080p"> <label for="1080p" data-i18n="pp_22"></label></li>
-          <li><input type="radio" name="quality" id="720p"> <label for="720p" data-i18n="pp_23"></label></li>
-          <li><input type="radio" name="quality" id="high"> <label for="high" data-i18n="pp_24"></label></li>
-          <li><input type="radio" name="quality" id="medium"> <label for="medium" data-i18n="pp_25"></label></li>
-          <li><input type="radio" name="quality" id="small"> <label for="small" data-i18n="pp_26"></label></li>
+          <li><input type="radio" name="quality" id="highest"> <label for="highest" data-i18n="pp_81"></label></li>
+          <li><input type="radio" name="quality" id="1080p"> <label for="1080p" data-i18n="pp_82"></label></li>
+          <li><input type="radio" name="quality" id="720p"> <label for="720p" data-i18n="pp_83"></label></li>
+          <li><input type="radio" name="quality" id="high"> <label for="high" data-i18n="pp_84"></label></li>
+          <li><input type="radio" name="quality" id="medium"> <label for="medium" data-i18n="pp_85"></label></li>
+          <li><input type="radio" name="quality" id="small"> <label for="small" data-i18n="pp_86"></label></li>
         </ul>
       </div>
     </div>
