--- a/data/inject/panel/index.html
+++ b/data/inject/panel/index.html
@@ -7,7 +7,7 @@
   </head>
   <body vbox data-loading="true">
     <template id="template-item">
-      <a class="item" hbox align="center" href="#" data-toolbar="false" onclick="return false;">
+      <a class="item" hbox align="center" href="#" data-toolbar="false">
         <span vbox data-cmd="toggle-toolbar">
           <img width="16" height="16" alt="" src="download.svg">
           <img width="16" height="16" alt="" src="dot.svg">
