--- a/data/inject/panel/index.html
+++ b/data/inject/panel/index.html
@@ -33,7 +33,7 @@
     </div>
     <div id="toolbar" hbox></div>
     <div id="externals" hbox align="center">
-      Integration with external download managers is in progress!
+      <span data-cmd="download-with-tdm">Download with Turbo Download Manager</span>
     </div>
     <script src="ui.js"></script>
     <script src="../youtube.js"></script>
